examples/test/testpolicy7875.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7875
  namespace: namespace177
spec:
  podSelector:
    matchLabels:
      key15: value3
      key46: value22
      key35: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value25
          key43: value27
      podSelector:
        matchLabels:
          key32: value36
          key48: value39
          key35: value48
